[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "authcore"
version = "0.1.0"
description = "Reusable JWT authentication + RBAC authorization library"
requires-python = ">=3.10"
dependencies = ["PyJWT>=2.6"]

[project.optional-dependencies]
example = ["flask>=3.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
